[project]
name = "foxglove-viz-demo"
version = "0.1.0"
description = "Foxglove WebSocket demo with rich visualization streams"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "foxglove-sdk>=0.17.2",
    "pydantic>=2.12.5",
]

[project.scripts]
foxglove_viz_demo = "main:main"

[tool.uv]
package = true
